--- a/week6/css/main.css
+++ b/week6/css/main.css
@@ -1,6 +1,8 @@
 body {
     color: darkslategrey;
     font-family: Arial, Helvetica, sans-serif;
+    /*Adding background image*/
+    background-image: url(..images/white_brick_wall.png);
 }
 
 /*
@@ -35,7 +37,21 @@ nav ul a {
 
 /*Selecting element with id*/
 #treatofweek {
-    background-color: orange;
+    /*color image repeat position-x position-y /size */
+    background: orange url(../images/bread.jpg) no-repeat center center;
+    background-size: cover;
+    color: white;
+
+    font-size: 1.25rem;
+    /*1.25*16(default)=20px*/
+
+    /*1em=20px*/
+    padding: 1em;
+    /*viewport based units vh and vw*/
+    /*height:100vh" */
+
+    /* % based on parent container width */
+    width: 50vw;
 }
 
 /* Selecting elements with class value   */
@@ -52,6 +68,10 @@ nav ul a {
 /* Child selector or direct child selector*/
 article>p {
     font-size: 24px;
+    font-weight: bold;
+    line-height: 1.5;
+    text-transform: lowercase;
+    text-align: center;
 }
 
 /* Adjacent sibling selector*/
