Correction for background image

--- a/week6/css/main.css
+++ b/week6/css/main.css
@@ -2,7 +2,7 @@ body {
     color: darkslategrey;
     font-family: Arial, Helvetica, sans-serif;
     /*Adding background image*/
-    background-image: url(..images/white_brick_wall.png);
+    background-image: url(../images/white_brick_wall.png);
 }
 
 /*
