--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -1,19 +1,177 @@
-body {
-    color: darkslategrey;
-    font-family: Arial, Helvetica, sans-serif;
-    /*Adding background image*/
-    background-image: url(../images/white_brick_wall.png);
-    }
-
-/*
-    This is a CSS comment
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
 */
-h1 {
-    color: peru;
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 
-p {
-    background-color: lightblue;
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+/* -----------------------------------------
+            Custom Styles
+-------------------------------------------- */
+
+body {
+    font-size: 16px;
+    background: #A0C8C3;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 1em;
+    background: #aad4cf;
+}
+
+img {
+    width: 100%;
+}
+
+/*Styling the banner*/
+.banner h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 3.375rem;
+    text-align: center;
+    color: white;
+    transform: translate(-50%, -50%);
+
+}
+
+.header {
+    position: relative;
+    text-align: center;
+    color: white;
 }
 
 /* Selecting multiple elements to add same style*/
@@ -21,170 +179,109 @@ h1,
 h2,
 h3,
 h4 {
-    text-decoration: underline;
-}
-
-/* Selecting child elements   */
-nav ul {
-    list-style: none;
-}
-
-/* Selecting child elements multiple levels  */
-nav ul a {
-    color: inherit;
-    text-decoration: none;
-}
-
-/*Selecting element with id*/
-#treatofweek {
-    /*color image repeat position-x position-y /size */
-    background: orange url(../images/bread.jpg) no-repeat center center;
-    background-size: cover;
-    color: white;
-
-    font-size: 1.25rem;
-    /*1.25*16(default)=20px*/
-
-    /*1em=20px*/
-    padding: 1em;
-    /*viewport based units vh and vw*/
-    /*height:100vh" */
-
-    /* % based on parent container width */
-    width: 50%;
-}
-
-/* Selecting elements with class value   */
-.orange-link {
-    background-color: darkslategrey;
-    color: orange;
-    text-decoration: none;
-}
-
-.large-text {
-    font-size: 24px;
-}
-
-/* Child selector or direct child selector*/
-article>p {
-    font-size: 24px;
     font-weight: bold;
-    line-height: 1.5;
-    text-transform: lowercase;
+    /* top left-right bottom */
+    margin: 1em 0 0.5em;
+}
+
+h2 {
+    font-size: 2.25rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+h4 {
+    font-size: 1.5rem;
+}
+
+h5 {
+    margin-left: 6px;
+}
+
+/*Styling the navigation*/
+.navigation {
     text-align: center;
 }
 
-/* Adjacent sibling selector*/
-h3+ul {
-    border: 1px solid black;
+.navigation ul {
+    display: inline-flex;
+    list-style: none;
 }
 
-/* Attribute selector */
+.navigation ul li a {
+    text-decoration: none;
+    color: black;
 
-[href="#treatofweek"] {
-    font-weight: bold;
+    padding-right: 170px;
+    padding-left: 170px;
+    border-right: 1px solid black;
 }
 
-
-/*  Using pseudo classes, styling the navigation         */
-
-
-nav ul a,
-nav ul a:link,
-nav ul a:visited {
-    background-color: orange;
-    box-shadow: -2px 2px 4px 2px black;
+.navigation ul li:last-child {
+    border-right: none;
 }
 
-nav ul a:hover,
-nav ul a:focus {
-    text-decoration: underline;
+/*Styling the unordered list items in the article*/
+article ul {
+    list-style-type: disc;
+    list-style-position: inside;
 }
 
-nav ul a:active {
-    box-shadow: 0 0 4px 2px black;
+/*Styling the small image*/
+.small-image {
+    display: inline-block;
+    max-width: 280px;
+    max-height: 300px;
 }
 
-/* Position related selectors */
-
-/*First-child and last-child */
-
-aside ul li:first-child {
-    font-weight: bold;
-}
-
-section ol li:last-child {
-    font-weight: bold;
-}
-
-/* Styling table */
-table {
-    border-collapse: collapse;
-}
-
-/* :nth-child selector with odd/even keyboard*/
-
-tbody tr:nth-child(even) {
-    background-color: #d5836d;
-}
-
-/* :nth-child selector with n. where n is 0,1,2,3 ... */
-
-table th:nth-child(n),
-table td:nth-child(n) {
-    border: 1px solid #000;
-}
-
-/* nth-child with a formula
-n   =0,1,2,3,....
-2n+1=1,3,5,7.....*/
-
-table td:nth-child(2n+1) {
-    background-color: rgba(0,0,0,0.2);
+.content img {
+    width: 35%;
+    float: left;
+    margin-right: 1em;
 }
 
 
-/* CSS specificity
-
-  Formula: inline-styles id class tag-name
-*/
-
-/* 0001 */
-footer {
-  background-color: aqua;
+/*Styling the form and textareas in Contact to learn more form*/
+.form {
+    box-shadow: 0px 0px 2px 1px black;
+    padding: 10px;
 }
 
-/* 0001 */
-footer {
-  background-color: red;
+input[type=text],
+textarea {
+    max-width: 1200px;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-left: 6px;
+    margin-right: 6px;
+   
 }
 
-
-/* 0002 */
-body footer {
-  background-color: orange;
+div {
+    background-color: #aad4cf;
+    padding: 6px;
 }
 
-/* 0010 */
-.site-footer {
-  background-color: cornflowerblue;
+.form label {
+    margin-left: 6px;
+    margin-right: 12px;
 }
 
-/* 0011 */
-footer.site-footer {
-  background-color: teal;
-} 
+/*Styling Send button*/
+.btn {
+    margin-top: 2px;
+    margin-bottom: 6px;
+    background-color: #aad4cf;
+    margin-left: 16px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*Styling copyright information in the footer*/
+.copyright {
+    text-align: right;
+    margin-top: 6px;
+}
