--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -140,7 +140,7 @@ table {
 
 body {
     font-size: 16px;
-    background: #A0C8C3;
+    background: #aad4cf;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -149,7 +149,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 1em;
-    background: #aad4cf;
+    background: #cee4e2;
 }
 
 img {
@@ -212,11 +212,13 @@ h5 {
 
 .navigation ul li a {
     text-decoration: none;
+    position: relative;
     color: black;
-
+    font-weight: bold;
+    font-size: 17px;
     padding-right: 170px;
     padding-left: 170px;
-    border-right: 1px solid black;
+    border-right: 1px solid grey;
 }
 
 .navigation ul li:last-child {
@@ -256,14 +258,14 @@ textarea {
     padding: 10px;
     border: 1px solid #ccc;
     box-sizing: border-box;
-    margin-top: 6px;
+    margin-top: 4px;
     margin-left: 6px;
     margin-right: 6px;
    
 }
 
 div {
-    background-color: #aad4cf;
+    background-color: #cee4e2;
     padding: 6px;
 }
 
@@ -274,14 +276,16 @@ div {
 
 /*Styling Send button*/
 .btn {
-    margin-top: 2px;
+    margin-top: 6px;
     margin-bottom: 6px;
-    background-color: #aad4cf;
+    background-color: #cee4e2;
     margin-left: 16px;
+    padding: 6px;
 }
 
 /*Styling copyright information in the footer*/
 .copyright {
+    margin-top: 12px;
     text-align: right;
-    margin-top: 6px;
+    
 }
