--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -147,6 +147,7 @@ body {
 
 .container {
     max-width: 1200px;
+    width:85%;
     margin: 0 auto;
     padding: 1em;
     background: #cee4e2;
@@ -212,13 +213,14 @@ h5 {
 
 .navigation ul li a {
     text-decoration: none;
-    position: relative;
     color: black;
     font-weight: bold;
     font-size: 17px;
     padding-right: 170px;
     padding-left: 170px;
     border-right: 1px solid grey;
+    width:85%;
+       
 }
 
 .navigation ul li:last-child a {
