--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -138,113 +138,128 @@ table {
             Custom Styles
 -------------------------------------------- */
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   box-sizing: border-box;
-}
-
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
 }
 
 body {
   line-height: 1.5;
 }
 
-.clearfix::after {
-  content: '';
-  display: table;
-  clear: both;
-}
-
-img {
-  width: 100%;
-}
-
-/* LoVe HAte */
 a,
 a:link,
 a:visited {
   color: inherit;
 }
 
-a:hover,
-a:focus {
-  color: #00ADD8;
+
+nav ul a:hover,
+nav ul a:focus {
+  background-color: #C78C06;
+  color: #222;
 }
+
+.nav {
+  box-sizing: border-box;
+  margin: 0 auto;
+  border: 10px solid #222;
+  line-height: 1;
+
+}
+
+.nav .logo {
+  text-align: left;
+  padding: 0;
+}
+
+.nav .home {
+  background-color: #C78C06;
+  color: #222;
+
+}
+
+.nav-list input[type="text"] {
+  width: 85%;
+  padding-top: 10px;
+}
+
+.nav-list li:nth-child(3) {
+  color: #C78C06;
+}
+
+.nav-list li:nth-child(4) {
+  color: #C78C06;
+}
+
+.nav-list li:nth-child(5) {
+  color: #C78C06;
+}
+
+.nav-list li:nth-child(6) {
+  color: #C78C06;
+}
+
+.nav .im {
+  background-color: #222;
+  color: #C78C06;
+  font-size: 22px;
+  padding: 0;
+  margin: 0;
+}
+
 
 h1,
 h2,
-h3,
-h4,
-h5 {
+h3 {
   font-weight: bold;
-  /* top left-right bottom */
-  margin: 1em 0 0.5em;
+  /* top left-right bottom 
+  margin: 1em 0 0.5em;*/
 }
 
 h1 {
-  font-size: 5.063rem;
-}
-
-h2 {
   font-size: 3.375rem;
 }
 
-h3 {
+h2 {
   font-size: 2.25rem;
 }
 
-h4 {
+h3 {
   font-size: 1.5rem;
-}
-
-h5 {
-  font-size: 1rem;
 }
 
 p {
   /* top-bottom left-right */
-  margin: 1em 0;
+  margin: 1em 1em;
 }
 
 .container {
-  max-width: 1200px;
   margin: 0 auto;
   padding: 1em;
 }
 
-/* ------- header ------ */
-.mobile-logo {
-  max-width: 150px;
+.navbanner {
+  width: 100%;
+
 }
 
-.desktop-logo {
-  display: none;
-}
-
-.banner {
-  height: 600px;
-  background: grey url("../images/mobile-banner.jpg") no-repeat center bottom;
-  background-size: cover;
-}
-
-.banner h1 {
-  margin: 0;
-  padding-top: 250px;
-  text-transform: uppercase;
-  text-align: center;
+.nav-list ul {
+  display: inline-flex;
+  margin: 0 auto;
 }
 
 /* Navigation */
 .nav-list li {
-  border-bottom: 1px solid grey;
+  border: none;
   text-align: center;
+  background-color: #222;
+  text-decoration: #C78C06;
+  flex: 1;
 }
 
 /* LoVe HAte */
+
 .nav-list a,
 .nav-list a:link,
 .nav-list a:visited {
@@ -253,100 +268,131 @@ p {
   text-decoration: none;
 }
 
+
 .nav-list a:hover,
 .nav-list a:focus,
 .nav-list a.current {
-  background-color: #00ADD8;
-  color: inherit;
+  background-color: #C78C06;
 }
 
-
-/* ---------- Mobile app section ------------- */
-.btn {
-  text-decoration: none;
+.logo {
   display: inline-block;
-  border: 1px solid grey;
+}
+
+.banner {
+  background: grey url("../images/main-banner.jpg") no-repeat center center;
+  background-size: cover;
+}
+
+.internalbanner {
+  padding-top: 50px;
+  padding-left: 40px;
+  padding-right: 40px;
+  width: 65%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.6);
+
+}
+
+.internalbanner h1 {
+  margin: 6px;
+  padding-left: 10px;
+  color: white;
+  font-weight: bold;
+
+}
+
+.internalbanner p {
+  margin: 6px;
+  padding-left: 10px;
+  color: white;
+}
+
+.internalbanner .btn {
+  text-decoration: none;
+  padding-left: 10px;
+  display: inline-block;
+  background-color: #C78C06;
+  border: 2px solid #222;
   border-radius: 4px;
   padding: 20px;
+  margin: 10px;
+  color: #222;
+  font-size: 1.2rem;
 }
 
-.btn:hover,
-.btn:focus {
-  color: inherit;
-  background-color: #00ADD8;
+.aboutus {
+  background-color: #ffe6ac;
+  display: inline-block;
+  justify-content: left;
+
 }
 
-/* ----------- Simple Actions Section ---------- */
-.actions-list {
-  display: flex;
-  flex-flow: row wrap;
+.aboutuscontent2 h2 {
+  text-align: left;
+  padding: 15px;
 }
 
-.actions-list li {
-  max-width: 50%;
-  padding: 1em;
-  text-align: center;
-  font-size: 1.5rem;
+.aboutuscontent img {
+  width: 100%;
+  padding: 15px;
+  box-sizing: border-box;
 }
 
-/* --------------- Footer --------------- */
+/*Our Services Section*/
 
-.site-footer {
-  border-top: 2px solid #00ADD8;
-  margin-top: 20px;
-  padding: 20px 0;
-}
-
-.copy {
-  text-align: right;
-}
-
-/* ---------------------------
-      Climate Action Page
------------------------------- */
-.card {
-  border: 1px solid #00ADD8;
+.services {
+  /*border: 1px solid #222;*/
   border-radius: 4px;
   margin-bottom: 1em;
+  background-color: #ffe6ac;
 }
 
-.card .info {
-  padding: 1em;
+.services img {
+  width: 100%;
 }
 
-.card h3 {
+.services .btn {
+  background-color: #222;
+  color: white;
+  border: 2px solid #222;
+  border-radius: 2px;
+  padding: 10px;
+  margin: 10px;
+  text-decoration: none;
+  padding-left: 10px;
+  display: inline-block;
+
+}
+.services h2 {
+background-color: white;
+}
+
+.services h3 {
   margin-top: 0;
+  padding-left: 10px;
 }
 
-/* news section */
-.news {
-  border-top: 2px solid #00ADD8;
-  margin-top: 4em;
-}
+
+
+
 
 /* --------------------------------------
             Desktop Styles
 ----------------------------------------- */
-@media screen and (min-width:600px) {
+@media screen and (min-width:760px) {
   html {
     font-size: 16px;
   }
 
-  .mobile-logo {
-    display: none;
-  }
 
-  .desktop-logo {
-    display: inline-block;
-    max-width: 300px;
-  }
+  .navbanner {
+    width: 100%;
+    /*margin: 0 auto;*/
+    /*padding: 1em;*/
+    background-color: #222;
+    box-sizing: border-box;
 
-  .banner {
-    background-image: url("../images/desktop-banner.jpg");
-  }
-
-  .banner h1 {
-    color: white;
   }
 
   /* Navigation */
@@ -357,79 +403,133 @@ p {
   .nav-list li {
     flex: 1;
     border: none;
-    border-right: 1px solid grey;
   }
 
-  .nav-list li:last-child {
-    border: none;
+  .nav-list ul {
+    max-width: 1000px;
+    margin: 0 auto;
   }
 
-  /* App section */
-  .app img {
-    width: 40%;
-    float: left;
-    margin-right: 1em;
+  .nav-list li:nth-child(2) {
+    display: inline-block;
+    width: 5%;
+    padding-left: 1em;
+    box-sizing: border-box;
   }
 
-  .app .btn {
-    float: right;
+  .nav-list .logo {
+    text-align: center;
   }
 
-  /* add clearfix to the parent */
-}
-
-/* ---------------------------------
-      Media Query 800px and above
-----------------------------------*/
-
-@media screen and (min-width:800px) {
-  .actions-list li {
-    max-width: 20%;
+  .internalbanner {
+    max-width: 1000px;
+    margin: 0 auto;
   }
 
-  /* --------------------
-    Climate Actions Page
-  ----------------------- */
-  .cards {
+
+
+
+  .aboutuscontent {
+    display: flex;
+    flex-direction: row;
+    /*max-width: 1000px;*/
+    margin: 0 auto;
+    align-content:center;
+
+    /* flex-grow: 1;*/
+    /*flex-wrap:wrap;*/
+    
+  }
+
+
+  .aboutus {
+    background-color: #ffe6ac;
+
+  }
+
+  .aboutuscontent img {
+    order: 1;
+    min-width: 50%;
+  }
+
+  .aboutuscontent2 {
+    order: 2;
+    min-width: 50%;
+
+  }
+
+  .services {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1em;
-  }
-
-  /* news section */
-  .news {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, auto);
-    grid-template-areas:
-      "head head"
-      "left right1"
-      "left right2"
+    grid-template-areas: "head head head head head head"
+      "digital digital digital marketing marketing marketing"
+      "video video web web print print"
     ;
     gap: 1em;
   }
 
-  .news h2 {
+  .services h2 {
     grid-area: head;
   }
 
-  .news .left {
-    grid-area: left;
+  .services .digital {
+    grid-area: digital;
   }
 
-  .news .right {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 1em;
+  .services .marketing {
+    grid-area: marketing;
   }
 
-  .news img {
-    grid-row: 1 / 3;
+  .services .video {
+    grid-area: video;
   }
 
-  .news h3 {
+  .services .web {
+    grid-area: web;
+  }
+
+  .services .print {
+    grid-area: print;
+  }
+
+ 
+  .services h3 {
     margin-top: 0;
     font-size: 1.5rem;
   }
 
+
+
+  /*
+  .services {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: "digital digital digital marketing marketing marketing"
+    "video video web web print print"
+    ;
+    gap: 1em;
+    }
+
+    .services .digital {
+      grid-area: digital;
+    }
+  
+    .services .marketing {
+      grid-area: marketing;
+    }
+  
+    .services .video {
+      grid-area: video;
+    }
+  
+    .services .web {
+      grid-area: web;
+    }
+    .services .print {
+      grid-area: print;
+    }
+
+*/
 }
