--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -211,7 +211,8 @@ nav ul a:focus {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-weight: bold;
   /* top left-right bottom 
   margin: 1em 0 0.5em;*/
@@ -223,10 +224,17 @@ h1 {
 
 h2 {
   font-size: 2.25rem;
+  margin-top: 15px;
 }
 
 h3 {
   font-size: 1.5rem;
+  margin-top: 20px;
+  padding-left: 15px;
+}
+
+h4 {
+  padding-left: 15px;
 }
 
 p {
@@ -289,7 +297,7 @@ p {
   padding-left: 40px;
   padding-right: 40px;
   width: 65%;
-  text-align: center;
+  /*text-align: center;*/
   background-color: rgba(0, 0, 0, 0.6);
 
 }
@@ -342,10 +350,14 @@ p {
 /*Our Services Section*/
 
 .services {
-  /*border: 1px solid #222;*/
+  display: grid;
   border-radius: 4px;
   margin-bottom: 1em;
-  background-color: #ffe6ac;
+  /*background-color: #ffe6ac;*/
+  margin-bottom: 20px;
+  margin-top: 15px;
+  background-color: white;
+  gap: 10px;
 }
 
 .services img {
@@ -357,26 +369,101 @@ p {
   color: white;
   border: 2px solid #222;
   border-radius: 2px;
-  padding: 10px;
-  margin: 10px;
+  padding: 15px;
+  margin: 15px;
   text-decoration: none;
   padding-left: 10px;
   display: inline-block;
 
 }
+
 .services h2 {
-background-color: white;
+  background-color: white;
 }
 
 .services h3 {
-  margin-top: 0;
-  padding-left: 10px;
+  margin-top: 20px;
+  font-weight: bold;
 }
 
+.services>div {
+  background-color: #ffe6ac;
+}
 
+/* Our Vision section */
+.ourvision {
+  background: grey url("../images/vision.jpg") no-repeat center center;
+  background-size: cover;
+  color: white;
+}
 
+.ourvisioncontent h3 {
+  padding-top: 20px;
+  padding-left: 15px;
+  font-weight: bold;
+}
 
+.btnvision {
+  text-decoration: none;
+  display: inline-block;
+  border: 2px solid #222;
+  padding: 20px;
+  margin: 15px;
+  color: white;
+  font-size: 1.2rem;
+  box-shadow: 0.5px 0.5px 0.5px 0.5px #C78C06;
+}
 
+/*Team Section*/
+
+.ourteamcontent {
+
+  display: flex;
+  flex-flow: row wrap;
+  }
+
+ /* .ourteamcontent div {
+    flex: 1;       
+  }*/
+
+.ourteamjohn {
+  background-color: #ffe6ac;
+}
+
+.ourteambob {
+  background-color: #ffe6ac;
+
+}
+
+.ourteamcontent img {
+  width: 100%;  
+  
+}
+
+/*Content section*/
+
+.contact {
+  display: grid;
+ 
+}
+
+.contact .sbmtbtn{
+  background-color: #222;
+  color: #C78C06;
+}
+
+/*Styling the form and textareas*/
+.form  {
+  padding: 10px;
+}
+
+.form input[type=text],
+textarea {
+  width: 100%;
+  box-sizing: border-box;
+ }
+
+ 
 /* --------------------------------------
             Desktop Styles
 ----------------------------------------- */
@@ -434,11 +521,11 @@ background-color: white;
     flex-direction: row;
     /*max-width: 1000px;*/
     margin: 0 auto;
-    align-content:center;
+    align-content: center;
 
     /* flex-grow: 1;*/
     /*flex-wrap:wrap;*/
-    
+
   }
 
 
@@ -459,14 +546,18 @@ background-color: white;
   }
 
   .services {
+    max-width: 1000px;
+    margin: 0 auto;
     display: grid;
+    margin-bottom: 20px;
+    background-color: white;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, auto);
     grid-template-areas: "head head head head head head"
       "digital digital digital marketing marketing marketing"
       "video video web web print print"
     ;
-    gap: 1em;
+    gap: 10px;
   }
 
   .services h2 {
@@ -493,43 +584,100 @@ background-color: white;
     grid-area: print;
   }
 
- 
+
   .services h3 {
-    margin-top: 0;
+    margin-top: 10px;
     font-size: 1.5rem;
   }
 
 
 
-  /*
-  .services {
+  .services>div {
+    background-color: #ffe6ac;
+  }
+
+
+  .ourvisioncontent {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
+  /*Team Section*/
+
+  .ourteamcontent {
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row wrap;
+  }
+    /*flex-wrap: wrap;*/
+  
+
+  .ourteamcontent h2 {
+    flex-basis: 100%;
+    order: 1;
+  }
+
+  .image-john {
+    flex-basis: 50%;
+    max-width: 50%;
+    order: 2;
+  }
+
+  .ourteamjohn {
+    max-width: 50%;
+    flex-basis: 50%;
+    order: 3;
+  }
+
+  .ourteambob {
+    max-width: 50%;
+    flex-basis: 50%;
+    order: 4;
+  }
+
+  .image-bob {
+    max-width: 50%;
+    flex-basis: 50%;
+    min-width: 50%;
+    order: 5;
+    max-height: 50%;
+    object-fit: cover;
+
+ 
+  }
+  
+  .contactuscontent {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: "digital digital digital marketing marketing marketing"
-    "video video web web print print"
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+      "head head"
+      "form maps"
+      "table"
     ;
     gap: 1em;
-    }
+  }
 
-    .services .digital {
-      grid-area: digital;
-    }
-  
-    .services .marketing {
-      grid-area: marketing;
-    }
-  
-    .services .video {
-      grid-area: video;
-    }
-  
-    .services .web {
-      grid-area: web;
-    }
-    .services .print {
-      grid-area: print;
-    }
 
-*/
+  .contactuscontent h3 {
+    grid-area: head;
+  }
+
+  .contactuscontent .form {
+    grid-area: form;
+  }
+
+  .contactuscontent .maps {
+    grid-area: maps;
+  }
+
+  .contactuscontent .table {
+    grid-area: table;
+  }
+
+  input[type=text],
+textarea {
+  max-width: 1000px;
+
 }
